<resources>
    <string name="app_name">润可OA</string>

    <!--app更新-->
    <string name="update_app_model_prepare">准备下载</string>
    <string name="update_app_model_progress">正在下载 %1$d%2$s</string>
    <string name="update_app_model_success">下载成功(点击安装)</string>
    <string name="update_app_model_error">下载失败(点击浏览器下载)</string>


    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>


    <item name="statusbarutil_fake_status_bar_view" type="id" />
    <item name="statusbarutil_translucent_view" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="corporate_name_txt">润可科技</string>


    <string name="news_txt">消息</string>
    <string name="week_txt">工作</string>
    <string name="journal_txt">日志</string>
    <string name="my_txt">我的</string>

    <string name="daily_txt">日报</string>
    <string name="weekly_txt">周报</string>
    <string name="monthly_txt">月报</string>
    <string name="srarch_txt">搜索</string>

    <string name="corporate_name_tv">贵州润可信息科技有限公司</string>
    <string name="department_txt">技术部-研发工程师</string>
    <string name="seting">设置</string>
    <string name="user_info">个人信息</string>
    <string name="info_security">修改密码</string>
    <string name="msg_notifi">新消息通知</string>
    <string name="about_txtx">关于我们</string>
    <string name="out_login_txt">退出登录</string>
    <string name="outlog_msg">退出后不会删除任何数据，下次登录依然可以使用本账号</string>
    <string name="copyright_txt">CopyRight @2018贵州润可信息科技有限公司 版权所有</string>
    <string name="persion_info_txt">个人信息</string>
    <string name="phone_number_txt">手机号</string>
    <string name="jon_num_txt">工号</string>
    <string name="user_txt">姓名</string>
    <string name="sex_txt">姓别</string>
    <string name="station_txt">岗位</string>
    <string name="birthday_txt">生日</string>
    <string name="pic_txt">图片</string>
    <string name="login">登录</string>
    <string name="login_username_num_txt">请输入账号</string>
    <string name="login_psd_num_txt">请输入登录密码</string>
    <string name="msg_noti_txt">消息通知</string>
    <string name="worknotice_txt">工作通知</string>
    <string name="refuse_txt">拒绝</string>
    <string name="agree_txt">同意</string>
    <string name="open_to_work">上班打卡</string>
    <string name="kaoqin_rules_txt">考勤组：考勤(查看规则)</string>
    <string name="on_duty_txt">在岗</string>
    <string name="business_travel_txt">出差</string>
    <string name="leave_txt">请假</string>
    <string name="submit_txt">提交</string>
    <string name="my_attendance">我的考勤</string>
    <string name="kaoqin_guiz_tv">考勤 (查看规则)</string>
    <string name="my_loan_txt">我的借款</string>
    <string name="app_repayment">申请还款</string>
    <string name="project_approval_log_txt">立项记录</string>
    <string name="reimbursement_txt">报销</string>
    <string name="more_txt">更多</string>
    <string name="add_baoxiaoi_mx_txt">新增报销明细</string>
    <string name="uplod_pic_txt">上传图片</string>
    <string name="true_txt">确认</string>
    <string name="delete_txt">删除</string>
    <string name="baoxiaojine_txt">报销金额(元)</string>
    <string name="baoxiao_cate_txt">报销类别</string>
    <string name="feiyong_mx_txt">费用明细</string>
    <string name="select_txt">请选择报销类别</string>
    <string name="feiyong_mx_ms_txt">请输入费用的明细描述</string>
    <string name="loanapplication_txt">借款申请</string>
    <string name="shenqingren_txt">申请人</string>
    <string name="qsrsqrxm_txt">请输入申请人姓名</string>
    <string name="bumeng_txt">部门</string>
    <string name="qxzbm_txt">请选择部门</string>
    <string name="shiyou_txt">事由</string>
    <string name="qsrsy_txt">请输入事由</string>
    <string name="sqje_txt">申请金额</string>
    <string name="qsrsqje_txt">请输入申请金额</string>
    <string name="daxie_txt">大写</string>
    <string name="shyiyong_date_txt">使用日期</string>
    <string name="qingxuanze_txt">请选择</string>
    <string name="shenpiren_txt">审批人</string>
    <string name="cahosongren_txt">抄送人</string>
    <string name="haikuanshenqing_txt">还款申请</string>
    <string name="hkje_txt">还款金额</string>
    <string name="haikuan_date_txt">还款日期</string>
    <string name="lixiangshenqing_txt">立项申请</string>
    <string name="lixiangjilu_txt">立项记录</string>
    <string name="xiangmuleixing_txt">项目类型</string>
    <string name="select_xiangmuleixing_txt">请选择项目类型</string>
    <string name="xiangmubianhao_txt">项目编号</string>
    <string name="xiangmumingcheng_txt">项目名称</string>
    <string name="fuzeren_txt">负责人</string>
    <string name="yusuanjine_txt">预算金额（元）</string>
    <string name="date_txt">日期</string>
    <string name="proj_shuoming">项目说明</string>
    <string name="lybzjz_txt">履约保证金支</string>
    <string name="lybzjs_txt">履约保证金收</string>
    <string name="bzjmc_txt">保证金名称</string>
    <string name="gsmc_txt">公司名称</string>
    <string name="skdwmc_txt">收款单位名称</string>
    <string name="yhzh_txt">银行账户</string>
    <string name="khh_txt">开户行</string>
    <string name="bzjje_txt">保证金金额(元)</string>
    <string name="start_date_txt">开始日期</string>
    <string name="end_date_txt">到期日期</string>
    <string name="fujian_txt">附件</string>
    <string name="beizhu_txt">备注</string>
    <string name="fkdwmc_txt">付款单位名称</string>
    <string name="toubiaozhi_txt">投标保证金支</string>
    <string name="toubiaoshou_txt">投标保证金收</string>
    <string name="htsq_txt">合同申请</string>
    <string name="htlx_txt">合同类型</string>
    <string name="qxzhtlx_txt">请选择合同的类型</string>
    <string name="htbh_txt">合同编号</string>
    <string name="htmc_txt">合同名称</string>
    <string name="htje_txt">合同金额(元)</string>
    <string name="htrq_txt">合同日期</string>
    <string name="htmx_txt">合同明细</string>
    <string name="ckhtmx_txt">查看合同明细</string>
    <string name="hkbz_txt">付款备注</string>
    <string name="fkblsm_txt">付款比例说明</string>
    <string name="chakan_txt">查看</string>
    <string name="skfxx_txt">收款方信息</string>
    <string name="fkfxx_txt">付款方信息</string>
    <string name="jine_txt">金额(元)</string>
    <string name="suilv_txt">税率</string>
    <string name="shuijin_txt">税金(元)</string>
    <string name="save_txt">保存</string>
    <string name="qingshuru_txt">请输入</string>
    <string name="fkbl_txt">付款比例</string>
    <string name="xuhao_txt">序号</string>
    <string name="bili_txt">比例</string>
    <string name="skfmc_txt">收款方名称</string>
    <string name="kfh_txt">开户行</string>
    <string name="yxdm_txt">信用代码</string>
    <string name="kpdh_txt">开票电话</string>
    <string name="kpdz_txt">开票地址</string>
    <string name="lxr_txt">联系人</string>
    <string name="lxdh_txt">联系电话</string>
    <string name="sksq_txt">收款申请</string>
    <string name="fksq_txt">付款申请</string>
    <string name="sqjl_txt">申请记录</string>
    <string name="ysk_txt">已收款</string>
    <string name="wsk_txt">未收款</string>
    <string name="ykp_txt">已开票</string>
    <string name="wkp_txt">未开票</string>
    <string name="bcsk_txt">本次收款(元)</string>

    <string name="ask_for_leave_txt">请假</string>
    <string name="afl_type_txt">请假类型</string>
    <string name="select_afl_type_txt">请选择请假类型</string>
    <string name="start_time_txt">开始时间</string>
    <string name="end_time_txt">结束时间</string>
    <string name="time_duration_txt">时长</string>
    <string name="input_time_duration_txt">请输入时长</string>
    <string name="time_duration_illustrate_txt">时长将自动计入考勤统计</string>
    <string name="afl_reason_txt">请假事由</string>
    <string name="input_afl_reason_txt">请输入请假事由</string>
    <string name="process_unsetting_txt">流程未设置</string>
    <string name="how_setting">如何设置</string>
    <string name="copier_txt">抄送人</string>
    <string name="copy_illustrate_txt">审批通过后，通知抄送人</string>

    <string name="afl_record_txt">请假记录</string>
    <string name="current_week">本周</string>
    <string name="current_month">本月</string>
    <string name="current_year">本年</string>
    <string name="t_afl_type_txt">请假类型：</string>
    <string name="t_start_time_txt">开始时间：</string>
    <string name="t_end_time_txt">结束时间：</string>

    <string name="yfk_txt">已付款</string>
    <string name="ysp_txt">已收票</string>


    <string name="d_daily_txt">日报</string>
    <string name="d_c_work_plan_txt">本周工作计划</string>
    <string name="d_t_work_plan_txt">今日工作计划</string>
    <string name="d_contract_no_txt">合同编号</string>
    <string name="d_contract_name_txt">合同名称</string>
    <string name="d_project_no_txt">项目编号</string>
    <string name="d_project_name_txt">项目名称</string>
    <string name="d_worktime_proportion_txt">工时比例</string>
    <string name="d_input_worktime_proportion_txt">请输入工时比例</string>
    <string name="d_work_content_txt">工作内容</string>
    <string name="d_input_work_content_txt">请填写工作内容</string>
    <string name="d_reimbursement_txt">报销费用</string>
    <string name="d_add_project_detail_txt">增加项目明细</string>
    <string name="d_tomorrow_workplan_txt">明日工作计划</string>
    <string name="d_input_workplan_txt">请填写工作计划</string>
    <string name="d_c_summary_work_txt">本周工作总结</string>
    <string name="d_input_summary_work_txt">请填写工作总结</string>
    <string name="d_next_week_plan">下周计划</string>

    <string name="m_month_txt">月报</string>
    <string name="m_c_month_work_plan_txt">本月工作计划</string>
    <string name="m_week_plan_txt">周计划</string>
    <string name="m_week_summary_txt">周总结</string>
    <string name="m_c_work_summary_txt">本月工作总结</string>
    <string name="m_next_work_plan">下月工作计划</string>
    <string name="m_self_grade_txt">自我评级</string>
    <string name="m_depart_leader_comment_txt">领导评语</string>
    <string name="m_leader_score_txt">领导打分</string>

    <string name="det_txt">详情</string>
    <string name="htjl_txt">合同记录</string>
    <string name="cehui_txt">撤回</string>
    <string name="htxq_txt">合同详情</string>
    <string name="lixiang_det_txt">立项详情</string>
    <string name="diffmoney_tv">票款差额</string>
    <string name="ce_xiao_txt">撤销</string>
    <string name="jiekuai_det_txt">借款详情</string>
    <string name="bx_log_txt">我的报销</string>F
    <string name="qjxq_tvt">请假详情</string>
    <string name="paiming_txt">排名</string>
    <string name="yuebao_det">月报详情</string>
    <string name="baoxiao_det">报销详情</string>
    <string name="lxxq_txt">立项详情</string>

    <string name="dialog_tip">提示</string>
    <string name="new_build_btn_txt">复制</string>


</resources>
