<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:orientation="vertical">


        <com.qymage.sys.common.widget.MeTitle
            android:id="@+id/metitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cTxt="@string/ysk_txt"
            app:rTxt="@string/save_txt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin5"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/date_txt"
                    android:textColor="@color/rizhi_color" />


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/jine_txt"
                    android:textColor="@color/rizhi_color"
                    android:textSize="@dimen/text_size_14" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/beizhu_txt"
                    android:textColor="@color/rizhi_color"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginRight="@dimen/margin15" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin10"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/new_add_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin20"
                    android:src="@mipmap/new_add_ioc" />

                <ImageView
                    android:id="@+id/del_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin20"
                    android:src="@mipmap/del_ioc" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</layout>
