<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:orientation="vertical">


        <com.qymage.sys.common.widget.MeTitle
            android:id="@+id/metitle"
            android:layout_width="match_parent"
            app:cTxt="@string/afl_record_txt"
            android:layout_height="wrap_content" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/week_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/join"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/current_week"
                android:textColor="@color/shape_radiobutton_select"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/month_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/join"
                android:button="@null"
                android:gravity="center"
                android:text="@string/current_month"
                android:textColor="@color/shape_radiobutton_select"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/year_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/join"
                android:button="@null"
                android:gravity="center"
                android:text="@string/current_year"
                android:textColor="@color/shape_radiobutton_select"
                android:textSize="16sp" />

        </RadioGroup>

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refreshlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.qymage.sys.common.widget.FrameEmptyLayout
                android:id="@+id/emptylayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.qymage.sys.common.widget.FrameEmptyLayout>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>


    </LinearLayout>

</layout>
